# xiva_website

./: .gitignore  LICENSE.md  README.md  pyproject.toml
__LeaningCurve/: the_programming_mindset.txt
root/: index.html
root/css/: gridStyles.css  styles.css
root/pages/: grid-exercise.html
src/: home_page.HTML
src/modules/: styles.css
