[project]
name = "name"
version = "0.0.1"
authors = [
  { name="Marcus Dalentoft", email="marcus.dalentoft@gmail.com" },
]
description = "description"
readme = "README.md"
requires-python = ">= |pyhton -V|"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "license_type"
license-files = ["LICEN[CS]E.md"]


dependencies = [
  "lib_name==ver.sion"
]

[project.urls]
Homepage = "https://github.com/users/Xiva42/projects/[repo_url]"
Issues = "https://github.com/users/Xiva42/projects/[repo_url]/issues"